2010-03-07  Abel Cheung  <abelcheung@gmail.com>

	* notation/guido.php:
	- Use more precise sizing and zoom ratio so that image will
	  not look blurred.

2010-03-04  Abel Cheung  <abelcheung@gmail.com>

	* Update ZeroClipboard to newest version (1.0.6).

=== ScoreRender 0.3.3 ===
2010-02-23  Abel Cheung  <abelcheung@gmail.com>

	* Everything below backported from trunk.
	* Update copyright, switch to AGPL v3.
	* scorerender-admin.php:
	- (scorerender_admin_options) Fix incorrectly placed html tags in
	  admin form, add icon to admin title.
	- Move 'show source' setting to contents section.
	* wp-scorerender.php:
	- (scorerender_conversion_hook) notation was not deactivated even when
	  corresponding notation program was unset.
	* wp-scorerender.php, scorerender-class.php:
	- Rename DEBUG constant to avoid potential name clash.
	* notation/lilypond.php:
	- (conversion_step1) Yet another fix for lilypond invocation. Safe
	  mode is there after all. Now precise version involving the change
	  is detected.
	* notation/pmw.php, notation/mup.php:
	- PostScript transparency for recent ImageMagick is properly detected.
	* notation/pmw.php:
	- Add command line argument to prevent reading config file.

=== ScoreRender 0.3.2 ===
2009-08-13  Abel Cheung  <abelcheung@gmail.com>

	* notation/lilypond.php (Backport from trunk):
	- (conversion_step1) Detect lilypond version and adjust command line
	  accordingly. Even lilypond command line options are unstable.
	- (lilypond_version) New func.

=== ScoreRender 0.3.1 ===
2009-07-26  Abel Cheung  <abelcheung@gmail.com>

	* wp-scorerender.php:
	- Also define notation URLs and names. (trunk)
	- (scorerender_get_def_settings) Replaced by trunk version, which has
	  better auto detection of binaries. (trunk)
	* scorerender-admin.php (scorerender_admin_options):
	- Strip redundant description. (trunk)

2009-07-26  Abel Cheung  <abelcheung@gmail.com>

	* scorerender-class.php (is_prog_usable):