@@ -1,3 +1,8 @@
+2010-03-08  Abel Cheung  <abelcheung@gmail.com>
+
+	* notation/guido.php:
+	- (conversion_step1) Try verifying retrieved data is really GIF.
+
 2010-03-07  Abel Cheung  <abelcheung@gmail.com>
 
 	* notation/guido.php:
